--- a/EmployeeManager/EmployeeManager/Views/ActivityLog/Index.cshtml
+++ b/EmployeeManager/EmployeeManager/Views/ActivityLog/Index.cshtml
@@ -1,37 +1,53 @@
-﻿
+﻿@model IEnumerable<EmployeeManager.Models.ActivityLog>
+
 @{
-    ViewData["Title"] = "Activity Log";
+	ViewData["Title"] = "Index";
 }
+<script>
+	$(document).ready(function () {
+		$('#ActivityLogTable').DataTable();
+	});
+</script>
 
-<h2>Activity Log</h2>
+<h2>Index</h2>
 
-<table class="table table-hover mt-4">
-	<thead class="thead-dark">
+@*<p>
+		<a asp-action="Create">Create New</a>
+	</p>*@
+<table class="table" id="ActivityLogTable">
+	<thead>
 		<tr>
-			<th scope="col">#</th>
-			<th scope="col">First</th>
-			<th scope="col">Last</th>
-			<th scope="col">Handle</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Action)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Details)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.AffectedTable)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.AddDate)
+			</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<th scope="row">1</th>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td>mdo</td>
-		</tr>
-		<tr>
-			<th scope="row">2</th>
-			<td>Jacob</td>
-			<td>Thornton</td>
-			<td>fat</td>
-		</tr>
-		<tr>
-			<th scope="row">3</th>
-			<td>Larry</td>
-			<td>the Bird</td>
-			<td>twitter</td>
-		</tr>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Action)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Details)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.AffectedTable)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.AddDate)
+				</td>
+			</tr>
+		}
 	</tbody>
 </table>
