--- a/EmployeeManager/EmployeeManager/Views/Shared/_Layout.cshtml
+++ b/EmployeeManager/EmployeeManager/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
 	<title>EM - @ViewData["Title"]</title>
 	@*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">*@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.css">
 	@*<link rel="stylesheet" type="text/css" href="~/css/site.css" />*@
 	<link href="~/css/site.min.css" rel="stylesheet" />
 
@@ -24,6 +25,14 @@
 		</environment>*@
 </head>
 <body>
+	<script src="~/lib/jquery/jquery.js"></script>
+
+	@*<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>*@
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+
 	@*<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
@@ -52,17 +61,10 @@
 
 	<div class="container body-content">
 		@RenderBody()
-
-		<footer>
-			<p>&copy; 2020 - EmployeeManager</p>
-		</footer>
 	</div>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-	<script src="~/js/site.js" asp-append-version="true"></script>
+
 	@*<environment include="Development">
 			<script src="~/lib/jquery/dist/jquery.js"></script>
 			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
