--- a/EmployeeManager/EmployeeManager/Views/Shared/_Navbar.cshtml
+++ b/EmployeeManager/EmployeeManager/Views/Shared/_Navbar.cshtml
@@ -1,5 +1,25 @@
 ﻿@using Microsoft.AspNetCore.Http.Features
 
+<script>
+	$(document).ready(function () {
+		switch (window.location.pathname.split('/')[1]) {
+			case "Employees":
+				$("#employeeNav").addClass("active");
+				break;
+			case "ActivityLog":
+				$("#activityLogNav").addClass("active");
+				break;
+			case "Reports":
+				$("#reportsNav").addClass("active");
+				break;
+			case "TeamSettings":
+				$("#teamSettingsNav").addClass("active");
+				break;
+		}
+	});
+	//console.log(window.location.pathname.split('/')[1]);
+</script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="container">
 		<a class="navbar-brand" href="/">EM</a>
@@ -9,37 +29,77 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="/EmployeeListing">Employee Listing <span class="sr-only">(current)</span></a>
-				</li>
 				<li class="nav-item">
+					<a id="employeeNav" class="nav-link" href="/Employees">Employees <span class="sr-only">(current)</span></a>
+				</li>
+				@*<li id="activityLogNav" class="nav-item">
 					<a class="nav-link" href="/ActivityLog">Activity Log</a>
+				</li>*@
+				<li id="reportsNav" class="nav-item dropdown">
+					<a id="reportsDeropdown" class="nav-link" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Reports</a>
+					<div class="dropdown-menu" aria-labelledby="reportsDeropdown">
+						<a class="dropdown-item" href="/Reports">Emplpoyee Retention</a>
+						<a class="dropdown-item" href="/Reports/DepartmentSpread">Department Spread</a>
+						<a class="dropdown-item" href="/Reports/ManagerSpread">Employees Per Manager</a>
+						@*<div class="dropdown-divider"></div>
+		<a class="dropdown-item" href="/SignIn">Switch Account</a>
+		<a class="dropdown-item" href="#">Sign Out</a>*@
+					</div>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Reports">Reports</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/TeamSettings">Team Settings</a>
+				<li id="teamSettingsNav" class="nav-item">
+					<a class="nav-link" href="/Departments">Team Settings</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Account Name
-						<span class="badge badge-danger">9</span>
+				<li id="activityLogNav" class="nav-item">
+					<a class="nav-link" href="/ActivityLog">
+						Activity Log
+						<span id="notificationBadge" class="badge badge-danger">0</span>
 					</a>
-					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/Profile">View/Edit Profile</a>
-						<a class="dropdown-item" href="/Profile">
-							View Activity Log
-							<span class="badge badge-danger">9</span>
-						</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="/SignIn">Switch Account</a>
-						<a class="dropdown-item" href="#">Sign Out</a>
-					</div>
 				</li>
 			</ul>
+			@*<ul class="navbar-nav">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Account Name
+							<span class="badge badge-danger">9</span>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="/Profile">View/Edit Profile</a>
+							<a class="dropdown-item" href="/ActivityLog">
+								View Activity Log
+								<span class="badge badge-danger">9</span>
+							</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="/SignIn">Switch Account</a>
+							<a class="dropdown-item" href="#">Sign Out</a>
+						</div>
+					</li>
+				</ul>*@
 		</div>
 	</div>
 </nav>
+
+<script>
+	$(document).ready(function () {
+		checkNotificationCount();
+		setInterval(checkNotificationCount, 3000);
+
+		function checkNotificationCount()
+		{
+			$.ajax({
+				url: '@Url.Action("GetNotifications", "ActivityLog")',
+				type: "get",
+				dataType: "json",
+				success: function (data) {
+					if (data.message == 0) {
+						$("#notificationBadge").hide();
+					}
+					else {
+						$("#notificationBadge").text(data.message).show();
+					}
+				}
+			});
+		}
+	});
+</script>
